--- a/src/lib/components/subsession/session-results.astro
+++ b/src/lib/components/subsession/session-results.astro
@@ -38,7 +38,7 @@ const { keysArray, handledResults } = handleResults({
     </tr>
   </table>
 </div>
-<div class="grid grid-cols-1 pt-6">
+<div class="grid grid-cols-1 pt-6 overflow-x-scroll">
   <table x-ref="Table" x-data={simsession_name} class="text-center col-span-1">
     <tr x-ref="Headings"
       >{
