--- a/src/lib/layouts/standings.astro
+++ b/src/lib/layouts/standings.astro
@@ -70,7 +70,7 @@ const generateLinkForKey = (key: string, resultAtKey: unknown) => {
 ---
 
 <DefaultLayout {seoTitle} {seoDescription}>
-  <div class="grid grid-cols-1 pt-6">
+  <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
     <table x-ref="Table" x-data="table" class="text-center col-span-1">
       <tr x-ref="Headings"
         >{
