--- a/src/lib/layouts/subsessions.astro
+++ b/src/lib/layouts/subsessions.astro
@@ -72,7 +72,7 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 ---
 
 <DefaultLayout {seoTitle} {seoDescription}>
-  <div class="grid grid-cols-1 pt-6">
+  <div class="grid grid-cols-1 pt-6 overflow-x-scroll">
     <table x-ref="Table" x-data="table" class="text-center col-span-1">
       <tr x-ref="Headings"
         >{
