--- a/src/pages/user/[id]/season/[seasonId].astro
+++ b/src/pages/user/[id]/season/[seasonId].astro
@@ -105,7 +105,7 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 		<title>Astro</title>
 	</head>
 	<body class="bg-gray-900 text-white font-sans pt-2">
-		<div class="grid grid-cols-1 pt-6">
+		<div class="grid grid-cols-1 pt-6 overflow-x-scroll">
 			<table x-ref="Table" x-data="table" class="text-center col-span-1">
 				<tr x-ref="Headings"
 					>{
